--- a/full analysis file.Rmd
+++ b/full analysis file.Rmd
@@ -28,25 +28,18 @@ select <- dplyr::select
 Load data
 ```{r}
 #clark
-clark_measures <- read_spss("/Users/katerinakyuchukova/Downloads/kat/Clark College Relationships Data/College_Relationship_Measures_1.sav")
-clark_pairwise <- read_spss("/Users/katerinakyuchukova/Downloads/kat/Clark College Relationships Data/College_Relationship_Pairwise_1.sav")
+clark_measures <- read_spss("Raw data/Clark College Relationships Data/College_Relationship_Measures_1.sav")
+clark_pairwise <- read_spss("Raw data/Clark College Relationships Data/College_Relationship_Pairwise_1.sav")
 
 #smith
-smith <- read_spss("/Users/katerinakyuchukova/Downloads/kat/Smith College Relationships Data/College_Relationship_Dyadic_September_14_2018_12_17.sav")
+smith <- read_spss("Raw data/Smith College Relationships Data/College_Relationship_Dyadic_September_14_2018_12_17.sav")
 
 #sentence data
-#clark_sentence_long1 <- read_spss("/Users/katerinakyuchukova/Downloads/kat/Clark College Relationships Data/sexist sentences/sentences_long.sav")
 
-#clark_sentence_wide1 <- read_spss("/Users/katerinakyuchukova/Downloads/kat/Clark College Relationships Data/sexist sentences/sentences_wide.sav")
-
-#clark_sentences_long2 <- read_spss("/Users/katerinakyuchukova/Downloads/kat/Clark College Relationships Data/sexist sentences/sentences_long2.sav")
-
-#clark_sentence_wide2 <- read_spss("/Users/katerinakyuchukova/Downloads/kat/Clark College Relationships Data/sexist sentences/sentences_wide2.sav")
-
-clark_sentences <- read.csv("/Users/katerinakyuchukova/Downloads/kat/Clark College Relationships Data/sexist sentences/coded_sentences.csv")
+clark_sentences <- read.csv("Raw data/Clark College Relationships Data/sexist sentences/coded_sentences.csv")
 
 #trigrams
-trigram_check <- read.csv("/Users/katerinakyuchukova/Downloads/kat/Clark College Relationships Data/trigrams/AMELIA_check_trigram_grading.csv")
+trigram_check <- read.csv("Raw data/Clark College Relationships Data/trigrams/AMELIA_check_trigram_grading.csv")
 ```
 
 
@@ -262,7 +255,7 @@ smith_trigrams_long <- smith_trigrams_long[,c(1,2,3,5,4)]
 
 #write.csv(smith_trigrams_long, "/Users/katerinakyuchukova/Downloads/kat/Smith College Relationships Data/trigrams_to_grade.csv", row.names=FALSE)
   
-smith_trigrams_graded <- read.csv("/Users/katerinakyuchukova/Downloads/kat/Smith College Relationships Data/trigrams_graded.csv")
+smith_trigrams_graded <- read.csv("Raw data/Smith College Relationships Data/trigrams_graded.csv")
 
 smith_triscore <- smith_trigrams_graded %>%
   group_by(partID, dyadID) %>%
@@ -399,9 +392,9 @@ smith_sentences_long <- smith_sentences_long %>%
 #write.csv(smith_sentences_long, "/Users/katerinakyuchukova/Downloads/kat/Smith College Relationships Data/sexist_sentences_for_coding.csv", row.names = FALSE) 
 
 #coding correlations
-kat_codes <- read.csv("/Users/katerinakyuchukova/Downloads/kat/Smith College Relationships Data/kat_sentences_coded.csv")
+kat_codes <- read.csv("Raw data/Smith College Relationships Data/kat_sentences_coded.csv")
 
-xinyu_codes <- read.csv("/Users/katerinakyuchukova/Downloads/kat/Smith College Relationships Data/xinyu_sentences.csv")
+xinyu_codes <- read.csv("Raw data/Smith College Relationships Data/xinyu_sentences.csv")
 
 coded_sentences <- merge(x=kat_codes, y=xinyu_codes, all.x = TRUE)
 
@@ -412,9 +405,9 @@ icc(smith_icc, model="twoway", unit="average")
 
 
 ##TAKE TWOOOO
-kat_codes2 <- read.csv("/Users/katerinakyuchukova/Downloads/kat/Smith College Relationships Data/kat_recode.csv")
+kat_codes2 <- read.csv("Raw data/Smith College Relationships Data/kat_recode.csv")
 
-xinyu_codes2 <- read.csv("/Users/katerinakyuchukova/Downloads/kat/Smith College Relationships Data/xinyu_recode.csv")
+xinyu_codes2 <- read.csv("Raw data/Smith College Relationships Data/xinyu_recode.csv")
 
 coded_sentences2 <- merge(x=kat_codes2, y=xinyu_codes2, all.x = TRUE)
 
