--- a/Final Manuscript.Rmd
+++ b/Final Manuscript.Rmd
@@ -74,7 +74,7 @@ x <- 7
 ```
 
 
-hi I'm the number `r x`.
+hi I'm the number `r x`. this is a change.
 
 # Methods
 We report how we determined our sample size, all data exclusions (if any), all manipulations, and all measures in the study. <!-- 21-word solution (Simmons, Nelson & Simonsohn, 2012; retrieved from http://ssrn.com/abstract=2160588) -->
